--- a/Resources/guess.css
+++ b/Resources/guess.css
@@ -89,11 +89,11 @@ main {
 }
 
 .wrong h5 {
-    background: linear-gradient(45deg, #FF3131, #FF914D);
+    background-image: linear-gradient(45deg, #FF3131, #FF914D);
 }
 
 .right h5 {
-    background: linear-gradient(45deg, #08B3D1, #7EFF47);
+    background-image: linear-gradient(45deg, #08B3D1, #7EFF47);
 }
 
 .game-stage h3 {
